# kodi-addon-nolimitconnect

./: .gitignore  CMakeLists.txt  KodiCompileNotes.txt  README.md  addon.xml  kodi-nlc.code-workspace  mkdocs.yml
src/libs/: .gitignore  CMakeLists.txt  NlcCommonConfig.h  NlcCompilerConfig.h  NlcCpuArchDefines.h  NlcDependLibrariesConfig.h  NlcPtoPVersion.txt  NlcTargetOsConfig.h  base64.h  config_appcorelibs.h  config_libkodi.h  config_libptop.h
src/libs/CoreLib/: AppErr.h  AppErr_corelib.cpp  AppVersion.h  AppVersion.h.in  AssetDefs.cpp  AssetDefs.h  AudioCallbackSpaceAvailable.h  BinaryBlob.cpp  BinaryBlob.h  CMakeLists.txt  ConnectId.cpp  ConnectId.h  DbBase.h  DbBase_corelib.cpp  DbDataset_corelib.cpp  GroupieId.cpp  GroupieId.h  HostedId.cpp  HostedId.h  ISktStatCallbackInterface.h  InetAddress.cpp  InetAddress.h  InetAddressParse.cpp  InetAddressParse.h  Invite.cpp  Invite.h  LogDefs.h  Logger.h  MediaCallbackInterface.h  ObjectCommon.h  ObjectCommonDefs.h  ObjectCommon_corelib.cpp  OsDetect.h  OsDetect_corelib.cpp  PktBlobEntry.cpp  PktBlobEntry.h  PluginId.cpp  PluginId.h  SHA1_corelib.cpp  Sha1ClientInfo.cpp  (+122 more)
src/libs/GuiInterface/: IAudioDefs.h  IAudioInterface.h  IDefs.cpp  IDefs.h  IFromGui.h  IFromGuiDefs.h  ILog.cpp  ILog.h  IMediaPlayerCallback.h  IMediaPlayerRequests.h  INlcEvents.h  INlcGeometry.h  INlcRender.h  IScan.h  ITimeDefs.h  IToGui.h  NlcRenderFrame.h
src/libs/MediaToolsLib/: AviDefs.h  AviDefs_mtools.cpp  CMakeLists.txt  MJPEGReader.h  MJPEGReader_mtools.cpp  MJPEGWriter.h  MJPEGWriter_mtools.cpp  MediaTools.h  MediaTools_mtools.cpp  MyOpusHeader.h  MyOpusHeader_mtools.cpp  OggBuffer.h  OggBuffer_mtools.cpp  OggStream.h  OggStream_mtools.cpp  OpusCallbackInterface.h  OpusFileDecoder.h  OpusFileDecoder_mtools.cpp  OpusFileEncoder.h  OpusFileEncoder_mtools.cpp  SndDefs.h  SndReader.h  SndReader_mtools.cpp  SndWriter.h  SndWriter_mtools.cpp
src/libs/NetLib/: CMakeLists.txt  NetHostSetting.cpp  NetHostSetting.h  NetHostSettingDefs.h  NetSettings.cpp  NetSettings.h  VxAnyRandomPort.h  VxBaseSktInfo.cpp  VxBaseSktInfo.h  VxClientMgr.cpp  VxClientMgr.h  VxFileXferInfo.cpp  VxFileXferInfo.h  VxGetRandomPort.cpp  VxGetRandomPort.h  VxHackerMgr.cpp  VxHackerMgr.h  VxHackerRecord.cpp  VxHackerRecord.h  VxHttpParse.cpp  VxHttpParse.h  VxHttpRequest.cpp  VxHttpRequest.h  VxHttpValuePair.cpp  VxHttpValuePair.h  VxListenLogic.cpp  VxListenLogic.h  VxPeerMgr.cpp  VxPeerMgr.h  VxPortForward.cpp  VxPortForward.h  VxProxy.cpp  VxProxy.h  VxServerMgr.cpp  VxServerMgr.h  VxSktAccept.cpp  VxSktAccept.h  VxSktBase.cpp  VxSktBase.h  VxSktBaseMgr.cpp  (+23 more)
src/libs/PktLib/: CMakeLists.txt  HostUserSessionId.cpp  HostUserSessionId.h  MatchParams.cpp  MatchParams.h  PktAdminAvail.cpp  PktAdminAvail.h  PktAnnList.cpp  PktAnnList.h  PktAnnounce.cpp  PktAnnounce.h  PktChatReq.cpp  PktChatReq.h  PktDebugHelpers.cpp  PktDebugHelpers.h  PktHostAnnounce.cpp  PktHostAnnounce.h  PktPluginHandlerBase.cpp  PktPluginHandlerBase.h  PktRequestErrors.h  PktSysHandlerBase.cpp  PktSysHandlerBase.h  PktTcpPunch.cpp  PktTcpPunch.h  PktTypes.h  PktVoiceReply.cpp  PktVoiceReply.h  PktVoiceReq.cpp  PktVoiceReq.h  PktsAssetXfer.cpp  PktsAssetXfer.h  PktsBaseXfer.cpp  PktsBaseXfer.h  PktsBlobXfer.cpp  PktsBlobXfer.h  PktsFileInfo.cpp  PktsFileInfo.h  PktsFileList.cpp  PktsFileList.h  PktsFileShare.cpp  (+79 more)
src/libs/VxVideoLib/: CMakeLists.txt  IVxVidCap.h  VxRescaleRgb.cpp  VxRescaleRgb.h  VxVidCap.cpp  VxVidCap.h  VxVidCapImp.cpp  VxVidCapImp.h  VxVideoConvert.cpp  VxVideoConvert.h  VxVideoLib.h
src/libs/ffmpeg/: CMakeLists.txt  config_aarch64.h  config_arm.h  config_components.h  config_ffmpeg.h  config_ffmpeg_android.asm  config_ffmpeg_defs.h  config_ffmpeg_linux.asm  config_ffmpeg_w64.asm
src/libs/libGLU/: CMakeLists.txt  LibGLU_Notes.txt  meson.build
src/libs/libUPnP/: CMakeLists.txt
src/libs/libasprintf/: CMakeLists.txt  config_libasprintf.h  vasnprintf.c
src/libs/libass/: CMakeLists.txt  ass_fontconfig.c
src/libs/libcrossguid/: CMakeLists.txt
src/libs/libdav1d/: CMakeLists.txt  config_dav1d.h  config_dav1d_aarch64_internal.h  config_dav1d_arm_internal.h  config_dav1d_internal.h  config_dav1d_x86_internal.h
src/libs/libfaac/: CMakeLists.txt
src/libs/libfreetype/: CMakeLists.txt
src/libs/libfribidi/: CMakeLists.txt
src/libs/libglew/: CMakeLists.txt
src/libs/libgnu/: CMakeLists.txt  asprintf_gnu.c  atexit_gnu.c  basename.h  basename_gnu.c  bindtextdom_gnu.c  btowc_gnu.c  canonicalize-lgpl_gnu.c  cldr-plural-exp_gnu.c  config_libgnu.h  convert_encoding_gnu.c  crypto-api_gnu.c  dcgettext_gnu.c  dcigettext_gnu.c  dcngettext_gnu.c  dgettext_gnu.c  dngettext_gnu.c  error_gnu.c  fatal-signal_gnu.c  finddomain_gnu.c  fnmatch.c  fnmatch_loop.c  format-kde-kuit_gnu.c  getopt.h  getopt1_gnu.c  getopt_gnu.c  getopt_int.h  gettext-po_gnu.c  gettextP.h  global_gnu.c  gnutls_auth.h  gnutls_datum.h  gnutls_errors_gnu.c  gnutls_global_gnu.c  gnutls_hash_int.h  gnutls_int.h  gnutls_mem.h  gnutls_state_gnu.c  gnutls_str.h  gnutls_str_gnu.c  (+74 more)
src/libs/libiconv/: CMakeLists.txt  config_libiconv.h  iconv.h
src/libs/libjpeg-turbo/: CMakeLists.txt  GitCloneInstructions.txt  VxJpg.cpp  VxJpgLib.h  jconfig.h  jconfigint.h  jconfigint_arm.h  turbojpeg.h
src/libs/libjpg/: CMakeLists.txt  VxJpg.cpp  VxJpgLib.h
src/libs/liblame/: CMakeLists.txt
src/libs/liblcms2/: CMakeLists.txt
src/libs/liblzma/: CMakeLists.txt  config_liblzma.h
src/libs/liblzo/: CMakeLists.txt  config_liblzo.h  lzodefs.h
src/libs/libmfx/: CMakeLists.txt
src/libs/libminiupnpc/: CMakeLists.txt  upnpc.h  wingenminiupnpcstrings.c
src/libs/libogg/: CMakeLists.txt
src/libs/libopencore-amr/: CMakeLists.txt
src/libs/libpcre/: CMakeLists.txt  pcre_compile.c  pcre_dfa_exec.c  pcre_exec.c  pcre_internal.h
src/libs/libplayer-nlc/: CMakeLists.txt  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md
src/libs/libplist/: CMakeLists.txt
src/libs/libpthread/: CMakeLists.txt  pthread.h
src/libs/libptopengine/: CMakeLists.txt
src/libs/librnnoise/: CMakeLists.txt  LibRNNoiseNotes.txt  RNNoise.cpp  RNNoise.h  config_rnnoise.h  (+1 more)
(+4628 files in other folders)
